Fix T101027: Sculpt tools don't respect visibility after recent commit

Caused by b5f7af31d6d4, which exposed the fact that the PBVH wasn't
retrieving the updated hide status attributes if they were allocated in
sculpt mode. Previously the attributes were always allocated when
entering sculpt mode.