source/blender/editors/sculpt_paint/paint_hide.c
@@ -383,6 +383,7 @@ static int hide_show_exec(bContext *C, wmOperator *op)
    * sculpt but it looks wrong when entering editmode otherwise). */
   if (pbvh_type == PBVH_FACES) {
     BKE_mesh_flush_hidden_from_verts(me);
+    BKE_pbvh_update_hide_attributes_from_mesh(pbvh);
   }
 
   SCULPT_visibility_sync_all_vertex_to_face_sets(ob->sculpt);
